corrected login flexbox centering and wrapped divs so they didn't overlap

--- a/css/app.css
+++ b/css/app.css
@@ -84,7 +84,13 @@ a {
 }
 main {
   display: flex;
+  flex-wrap: wrap;
   height: calc(100vh - 98px);
+}
+
+main.container {
+  justify-content: center;
+  align-items: center;
 }
 .log-in {
   background-color: white;
